Fix the form not showing in the iframe

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -20,8 +20,11 @@
 
 .form {
   border: none;
-  max-height:100vh;
-  max-width:100%;
+  max-height: 100vh;
+  width: 100%;
+  /* The form is not shown in the iframe if it's not at least 320x320 px. */
+  min-width: 320px;
+  min-height: 320px;
 }
 
 .formContainer {
@@ -30,6 +33,5 @@
   box-shadow: 0 0 10px #333;
   flex: 1;
   margin: 2rem auto;
-  max-width: 500px;
   padding: 2rem;
 }
